@@ -1,3 +1,10 @@
+2014-08-19  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* char_routines.c, ligkern_routines.c: More OFM checking.
+	* check.test, check.{ofm,opl}, checked.opl:
+	Shell script and data for a new test.
+	* Makefile.am: Add the new test.
+
 2014-08-18  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* ofonts.test: Fix parallel tests.
